[package]
name = "bitcalc"
version = "0.1.0"
authors = ["Zaxon <zaxon@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.2"
egui = "0.26.2"
env_logger = "0.11.3"
strum_macros = "0.26.2"
strum = { version = "0.26.2", features = ["derive"] }
